<resources>
    <string name="app_name">WorkAssistant</string>
    <string name="btn_menu">Button Menu</string>
    <string name="btn_find">Button Find</string>
    <string name="img_title">Title Iamge</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="img_todo">Картинка главного окна</string>
    <string name="card_img">Картинка карточки</string>
    <string name="card_title">Заголовок статьи</string>
    <string name="card_text">Введите текст сообщения...</string>
    <string name="User_fio">Камушкин Павел Иваныч</string>

    <string name="tv_help_title_text">Справка</string>
    <string name="tv_help_text_text">В будующем тут будет находиться краткая справка для работы с описанием всех иструментов, разделов и возможностей приложения. Например на данный момент готова основная лента новостей, ее можно коментировать. Реализована авторзация пользователей. В случаи возникновения проблем с приложеним или если у вас появились какие то предлоджения по доработке просим связаться вас с ИТ службой ИННЦ.</string>
    <string name="m_serv_name">Сервисы</string>
    <string name="m_news_text">Новое сообщение</string>
    <string name="m_notif_text">Уведомления</string>
    <string name="m_chat_text">Чат</string>
    <string name="m_support_text">Поддержка</string>
    <string name="m_sup_task_text">Предложения</string>
    <string name="m_sup_help_text">Справка</string>
    <string name="m_sup_setting_text">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="support_title">Поддержка</string>
    <string name="newsTitle">Все</string>
    <string name="cardCategoria">категория</string>
    <string name="DateCreateView">Дата создания</string>
    <string name="tvComText">Комментарии</string>
    <string name="editComment_hintText">Введите текст комментария...</string>
    <string name="tvMessageDefault">пусто</string>
    <string name="persDefaultIcon">TODO</string>
    <string name="persDefaultName">noName</string>
    <string name="persMesDateDefault">no date</string>
    <string name="maskPict">maskPict</string>
    <string name="lpassText">Пароль</string>
    <string name="lLoginText">Логин</string>
    <string name="autorizeText">Вход</string>
    <string name="btnNewRegText">Зарегистрироваться</string>
    <string name="btnLoginText">Войти</string>
    <string name="ePassHint">введите пароль...</string>
    <string name="eLoginHint">введите логин...</string>
    <string name="m_change_user">Сменить пользователя</string>
    <string name="lFoggotPass_text">Забыли пароль?</string>
    <string name="tvRegHeadTxt">Регистрация пользователя</string>
    <string name="ptNameHint">Введите логин...</string>
    <string name="ptMailHint">Введите почту...</string>
    <string name="ettPass">Введите пароль...</string>
    <string name="ettPass2">Повторите пароль...</string>
    <string name="btnTryRegtxt">Зарегистророваться</string>
    <string name="userCardLoginText">Логин</string>
    <string name="userCardHeadText">Сохранить настройки?</string>
    <string name="userCardNameText">Имя</string>
    <string name="userCardPassText">Пароль</string>
    <string name="userCardEmailText">Почта</string>
    <string name="avatarHint">Аватарка</string>
    <string name="UserCardDescText">Описание</string>
    <string name="UserCardSavebtnText">OK</string>
    <string name="tbnSendPersMessagetxt">Отправить личное сообщение</string>
    <string name="lodingMessage">Приложение загружается ждите...</string>
    <string name="userCardPassTextRepeat">Повторить пароль</string>
    <string name="uaserCardpassHint">новый пароль...</string>
    <string name="uaserCardpassRepeatHint">новый пароль...</string>
    <string name="btnSaveCard">Сохранить</string>
    <string name="mesCartTitle">Сообщение</string>
    <string name="ibFullView">Раскрыть/скрыть</string>
    <string name="cardSmallImgDesc">Мини иконка сообщения</string>
    <string name="roleName">Имя роли</string>
    <string name="roleUserCount">кол</string>
    <string name="roleDesc">Описание роли</string>
    <string name="btnAddUser">Добавить пользователя</string>
    <string name="addNewRoleStr">Добавить новую роль</string>
    <string name="btnDeleteRoleStr">Удалить роль</string>
    <string name="findStringHint">введите строку для поиска...</string>
    <string name="m_sup_admintools_text">Администрирование</string>
    <string name="btnDelCard">Удалить</string>
    <string name="coutUserTxt">Пользователей:</string>
    <string name="isSystemTxt">Системная</string>
    <string name="tvChatMembers">Учасники</string>
    <string name="tvChatDatetxt">Дата последнего сообщения</string>
    <string name="tvChatLastMesstxt">Последнее сообщение</string>
    <string name="btnSelectUserstxt">Выбрать пользователей</string>
    <string name="tvSelectUserstxt">Выбрать пользователей</string>
    <string name="tvRoomUserstxt">Состав комнаты</string>
    <string name="delRoomtxt">Покинуть канал</string>
    <string name="canalNametxt">Имя канала</string>
    <string name="btnCancelTxt">отменить поиск</string>
    <string name="myblogtxt">Мой блог</string>
</resources>