<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="3dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/layoutIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/maskPict"
                    app:srcCompat="@drawable/ic_avatar_form" />

                <ImageView
                    android:id="@+id/userIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/persDefaultIcon"
                    tools:srcCompat="@android:drawable/ic_menu_myplaces" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/layoutBaseInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1F6F6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/roleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/roleName" />

                    <TextView
                        android:id="@+id/roleUserCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/roleUserCount"
                        android:textAlignment="textEnd" />

                    <ImageButton
                        android:id="@+id/ibRoleOpen"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />
                </LinearLayout>

                <TextView
                    android:id="@+id/roleDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/roleDesc" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btnDeleteRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange"
                android:text="@string/btnDeleteRoleStr"
                app:icon="@android:drawable/ic_delete" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnAddUsertoRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/btnAddUser" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>